--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -15,7 +15,11 @@
     {% endif %}
     
 
-  <div id="myCarousel" class="carousel slide " data-ride="carousel">
+
+
+  <!-- Wrapper for slides -->
+  {% if user.is_staff %}
+    <div id="myCarousel" class="carousel slide " data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -24,31 +28,29 @@
     <li data-target="#myCarousel" data-slide-to="3"></li>
   </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+      <div class="carousel-inner" role="listbox">
     <div class="item active">
-     	<h2 class=" my-subjects-title"><b><i>{% trans "Most popular keywords" %}</i></b></h2>
-      	<div id="" class="col-md-12">
-      		<div class="users-cloud div-users-cloud">
-      			<ul class=" users-cloud">
-      				{% for tag in tags %}
-      					{% if tag.1 == 0 %}
-      						<li class="big"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
-      					{% elif tag.1 == 1 %}
-      						<li class="medium"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
-      					{% else %}
-      						<li class="small"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
-      					{% endif %}
+      <h2 class=" my-subjects-title"><b><i>{% trans "Most popular keywords" %}</i></b></h2>
+        <div id="" class="col-md-12">
+          <div class="users-cloud div-users-cloud">
+            <ul class=" users-cloud">
+              {% for tag in tags %}
+                {% if tag.1 == 0 %}
+                  <li class="big"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
+                {% elif tag.1 == 1 %}
+                  <li class="medium"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
+                {% else %}
+                  <li class="small"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
+                {% endif %}
 
-      					
-      				{% endfor %}
-      			</ul>
-      		</div>
-      	</div>
+                
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
     </div>
 
-   
-  </div>
+     </div>
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -60,6 +62,31 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+  {% else %}
+
+     <h2 class=" my-subjects-title"><b><i>{% trans "Most popular keywords" %}</i></b></h2>
+        <div id="" class="col-md-12">
+          <div class="users-cloud div-users-cloud">
+            <ul class=" users-cloud">
+              {% for tag in tags %}
+                {% if tag.1 == 0 %}
+                  <li class="big"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
+                {% elif tag.1 == 1 %}
+                  <li class="medium"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
+                {% else %}
+                  <li class="small"><a href="{% url 'subjects:search' %}?search={{tag.0}}">{{tag.0}}</a></li>
+                {% endif %}
+
+                
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+  {% endif %}
+
+
+   
+ 
 	
 	
 	<div class="col-md-12 cards-content">
