--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -316,13 +316,13 @@ a, a:focus, a:hover {
   border-color: #039BE5; }
 
 /* Pendencies Form */
-.notifies {
+.notifies, .goalitems {
   border: 1px solid #EEEEEE; }
 
 .bootstrap-datetimepicker-widget {
   background-color: #fff; }
 
-.notifies a.delete-row {
+.notifies a.delete-row, .goalitems a.delete-row {
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   background-color: #EEE;
