--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -437,7 +437,7 @@ a, a:focus, a:hover
 /* Pendencies Form */
 
 
-.notifies 
+.notifies, .goalitems 
     border: 1px solid #EEEEEE
 
 
@@ -445,7 +445,7 @@ a, a:focus, a:hover
     background-color: #fff
 
 
-.notifies a.delete-row 
+.notifies a.delete-row, .goalitems a.delete-row
     -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12)
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12)
     background-color: #EEE
