--- a/goals/templates/goals/create.html
+++ b/goals/templates/goals/create.html
@@ -5,11 +5,13 @@
 {% block style %}
 	{{block.super}}
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-tagsinput.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-slider.css" %}">
 {% endblock %}
 
 {% block javascript %}
 	{{block.super}}
 	<script type="text/javascript" src="{% static "js/bootstrap-tagsinput.js" %} "></script>
+	<script type="text/javascript" src="{% static "js/bootstrap-slider.js" %} "></script>
 	<script type="text/javascript" src="{% static "js/jquery.formset.js" %} "></script>
 {% endblock %}
 
