Changing slider style

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -753,7 +753,7 @@ a:focus {
     margin-bottom: 10px;
 }
 
-.notifies .action_label {
+.notifies .action_label, .goalitems .desc_label {
     padding-top: 7px;
 }
 
