--- a/goals/templates/goals/_form.html
+++ b/goals/templates/goals/_form.html
@@ -102,7 +102,9 @@
 		        				</label>
 		        				<div class="col-md-9">
 		        					<span class="label">0%</span>
-		        					{% render_field item.ref_value class='slider_value' data-slider-min="0" data-slider-max="100" %}
+		        					{% with item.ref_value.value|default:"0" as item_value %}
+		        						{% render_field item.ref_value class='slider_value' data-slider-value=item_value data-slider-min="0" data-slider-max="100" %}
+		        					{% endwith %}
 		        					<span class="label">100%</span>
 		        				</div>
 
@@ -192,7 +194,7 @@
 				</div>
 			{% endif %}
 		</div>
-	
+		
 		<div class="panel panel-info">
 			<div class="panel-heading">
     			<div class="row">
@@ -212,6 +214,7 @@
 				{% for notify in pendencies_form %}
 	        		<div class="notifies">
 	        			<div style="text-align:left">
+	        				{{ notify.errors }}
 	            			{% render_field notify.id %}
 	            			{% render_field notify.resource %}
 	            			{% render_field notify.subject class='pend_subj' %}
@@ -390,7 +393,6 @@
 	$(function() {
 		$(".slider_value").bootstrapSlider({
 			tooltip: 'always',
-			value: '0'
 		});
 
 		$('.goalitems').formset({
@@ -476,6 +478,10 @@
 
 		{% if not pendencies_form.is_valid and pendencies_form.is_bound %}
 			$("#notifications").collapse('toggle');
+		{% endif %}
+
+		{% if not goalitems_form.is_valid and goalitems_form.is_bound %}
+			$("#goal_items").collapse('toggle');
 		{% endif %}
 	});
 </script>
