--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -636,9 +636,11 @@ a.add-row
 .btn:not(.btn-raised):not(.btn-link):focus, .btn:not(.btn-raised):not(.btn-link):hover, .input-group-btn .btn:not(.btn-raised):not(.btn-link):focus, .input-group-btn .btn:not(.btn-raised):not(.btn-link):hover 
     background-color: initial
 
-.goalitems .slider  
+.goalitems .slider, .goal_item .slider  
     background-color: initial
 
+.goal_divider
+    border-top-color: #888
 
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
