--- a/goals/templates/goals/view.html
+++ b/goals/templates/goals/view.html
@@ -5,18 +5,19 @@
 
 {% block style %}
 	{{block.super}}
-	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-slider.css" %}">
 {% endblock %}
 
 {% block javascript%}
 	{{ block.super }}
-	<script type="text/javascript" src="{% static "js/bootstrap-slider.js" %} "></script>
 {% endblock%}
 
 {% block breadcrumbs %}
 	{{ block.super }}
 	{% breadcrumb topic 'subjects:topic_view' subject.slug topic.slug %}
-	{% breadcrumb goals 'goals:view' goals.slug %}
+	{% breadcrumb goal 'goals:submit' goal.slug %}
+
+	{% trans 'My Goals' as bread %}
+	{% breadcrumb bread 'goals:view' goal.slug %}	
 {% endblock %}
 
 {% block content %}
@@ -31,9 +32,9 @@
 		{% endfor %}
 	{% endif %}
 
-	{% resource_permissions request.user goals as has_resource_permissions %}
+	{% resource_permissions request.user goal as has_resource_permissions %}
 
-    {% if goals.visible %}
+    {% if goal.visible %}
 		<div class="panel panel-info topic-panel">
         	<div class="panel-heading">
 	{% elif has_resource_permissions %}
@@ -43,13 +44,13 @@
 				<div class="row">
 					<div class="col-md-12 category-header">
 						<h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-							<span>{{ goals }}</span>
+							<span>{{ goal }}</span>
 						</h4>
 
 						<div class="col-md-5 pull-right category-card-items">
-							<a href="{% url 'mural:resource_view' goals.slug %}" class="pull-right action_icon">
+							<a href="{% url 'mural:resource_view' goal.slug %}" class="pull-right action_icon">
 								<i class="fa fa-list" aria-hidden="true"></i>
-								{% resource_mural_number goals request.user %}
+								{% resource_mural_number goal request.user %}
 							</a>
 						</div>
 					</div>
@@ -57,24 +58,21 @@
 			</div>
 			<div id="{{subject.slug}}" class="panel-collapse in collapse category-panel-content">
 				{% autoescape off %}
-					{{ goals.presentation }}
+					{{ goal.presentation }}
 				{% endautoescape %}
 
 				<br clear="all" />
 
-				<b>{% trans "Limit submission date" %}:</b> {{ goals.limit_submission_date }}
+				<b>{% trans "Limit submission date" %}:</b> {{ goal.limit_submission_date }}
 
 				<hr class="goal_divider" />
 
-				{% for item in goals.item_goal.all %}
+				{% for mine in itens %}
 					<div class="row goal_item">
 						<div class="col-md-12">
-							<h4>{% trans 'Goal' %} {{ item.order }}: {{ item.description }}</h4>
-							<p>{% trans 'Minimum percentage desired' %}: {{ item.ref_value }}%</p>
-							<br clear="all" />
-							<span class="label">0%</span>
-        						<input type="text" class="slider_value" value="{{ item.ref_value }}" data-slider-value="{{ item.ref_value }}" data-slider-min="0" data-slider-max="100" />
-        					<span class="label">100%</span>
+							<h4>{% trans 'Goal' %} {{ mine.item.order }}: {{ mine.item.description }}</h4>
+							<p>{% trans 'Minimum percentage desired' %}: {{ mine.item.ref_value }}%</p>
+							<p><b>{% trans 'Goal stabilished' %}: {{ mine.value }}%</b></p>
 						</div>
 					</div>
 				{% endfor %}
@@ -82,17 +80,8 @@
 				<hr />
 
 				<div class="text-center">
-					<a href="#" class="btn btn-success btn-raised">{% trans 'Save' %}</a>
+					<a href="#" class="btn btn-success btn-raised">{% trans 'Update Goals' %}</a>
 				</div>
 			</div>
 		</div>
-
-	<script type="text/javascript">
-		$(function () {
-			$(".slider_value").bootstrapSlider({
-				tooltip: 'always',
-				enabled: false
-			});
-		});
-	</script>
 {% endblock %}
