--- a/goals/templates/goals/view.html
+++ b/goals/templates/goals/view.html
@@ -80,7 +80,7 @@
 				<hr />
 
 				<div class="text-center">
-					<a href="#" class="btn btn-success btn-raised">{% trans 'Update Goals' %}</a>
+					<a href="{% url 'goals:update_submit' goal.slug %}" class="btn btn-success btn-raised">{% trans 'Update Goals' %}</a>
 				</div>
 			</div>
 		</div>
