--- a/api/templates/api/report.html
+++ b/api/templates/api/report.html
@@ -13,4 +13,19 @@
 
 {% block content %}
 	
+
+	{% for user, datum in data.items %}
+		
+
+		<p>
+			<ul>
+
+				{{user}} : 
+				{% for key, value in datum.items %}
+					<li>{{key}}: {{value}}</li>
+				{% endfor %}
+			</ul>
+
+		</p>
+	{% endfor %}
 {% endblock content %}
