added report app and removed query of reports from api app, modified css for report page and added link to subject cards

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1197,3 +1197,12 @@ li.item .notify_badge {
     font-size: 20px;
 }
 /* End Goals */
+
+
+/* Reports */
+
+.report-menu-choice li{
+    width: 15%;
+    text-align: center;
+}
+/* End Reports */
