--- a/reports/templates/reports/report.html
+++ b/reports/templates/reports/report.html
@@ -2,17 +2,49 @@
 
 {% load static i18n pagination %}
 {% load django_bootstrap_breadcrumbs %}
+{% load widget_tweaks %}
 
 {% block breadcrumbs %}
     {{ block.super }}
     
-    {% trans 'Mural: General' as general %}
-
-    {% breadcrumb general 'mural:manage_general' %}
+    {% breadcrumb 'analytics' '' %}
 {% endblock %}
 
 {% block content %}
 	
+	<div class="panel panel-info topic-panel">
+            <div class="panel-heading">
+            	<div class="row">
+                    <div class="col-md-12 category-header">
+                        <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                            <span>{% trans "Analytics" %}</span>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+    </div>
+
+    <div id="core-subjects-options-div">
+        <ul class="core-subjects-options report-menu-choice">
+        	<li class="active">
+        		{% trans "Interaction Data" %}
+        	</li>
+        	<li>
+        		{% trans "Report Card" %}
+        	</li>
+        	<li>
+        		{% trans "Participation" %}
+        	</li>
+        </ul>
+    </div>
+
+<form action="" method="post">{% csrf_token %}
+    {% for field  in form %}
+    	<label> {{field.label}} </label>
+			{% render_field field class='form-control' %}
+    {% endfor %}
+    <input type="submit" value="Send message" />
+</form>
 
 	{% for user, datum in data.items %}
 		
