Concertando os bugs do tipo substituir icone de file por image nos campos de imagens

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -31,7 +31,7 @@
 					</div>
 				{% endfor %}
 			{% endif %}
-			
+
 			<div class="card">
 				<div class="card-body">
 					<div class="row">
@@ -52,7 +52,7 @@
 							                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
 							                    <span class="input-group-btn">
 							                        <button type="button" class="btn btn-fab btn-fab-mini">
-							                          	<i class="material-icons">attach_file</i>
+							                          	<i class="material-icons">image</i>
 							                        </button>
 							                    </span>
 							                </div>
