--- a/users/templates/users/_form.html
+++ b/users/templates/users/_form.html
@@ -16,7 +16,7 @@
                   	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
                   	<span class="input-group-btn input-group-sm">
                     	<button type="button" class="btn btn-fab btn-fab-mini">
-                    		<i class="material-icons">attach_file</i>
+                    		<i class="material-icons">image</i>
                    		</button>
                   	</span>
                 </div>
