--- a/amadeus/static/css/themes/black.css
+++ b/amadeus/static/css/themes/black.css
@@ -558,4 +558,15 @@ a.add-row {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
     backgroun-color: #474b4b !important; } }
 
+/* Color Checkbox */
+
+.checkbox input[type=checkbox]:checked+.checkbox-material .check, label.checkbox-inline input[type=checkbox]:checked+.checkbox-material .check {
+    color: black;
+    border-color: black;
+}
+
+.checkbox input[type=checkbox]:checked+.checkbox-material .check:before, label.checkbox-inline input[type=checkbox]:checked+.checkbox-material .check:before {
+  color: black;
+}
+
 /*# sourceMappingURL=black.css.map */
