--- a/reports/templates/reports/report.html
+++ b/reports/templates/reports/report.html
@@ -38,14 +38,8 @@
         </ul>
     </div>
 
-<form action="" method="post">{% csrf_token %}
-    {% for field  in form %}
-    	<label> {{field.label}} </label>
-			{% render_field field class='form-control' %}
-    {% endfor %}
-    <input type="submit" value="Send message" />
-</form>
-
+    {% include "reports/_form.html" %}
+	
 	{% for user, datum in data.items %}
 		
 
