--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -5,7 +5,7 @@
 
 {% block javascript%}
     {{ block.super }}
-    <script type="text/javascript" src=" {% static "subjects/js/modal_subject.js" %} "></script>
+    <script type="text/javascript" src=" {% static 'subjects/js/modal_subject.js' %} "></script>
 {% endblock%}
 
 {% block breadcrumbs %}
@@ -39,7 +39,7 @@
                 <a href="{% url 'subjects:index' %}"><li class="active">{% trans "My subjects" %} ({{ totals.my_subjects }})</li></a>
                 <a href="{% url 'subjects:index' 'all' %}" ><li>{% trans "All subjects" %} ({{ totals.all_subjects }})</li></a>
             {% endif %}
-            
+
         </ul>
     </div>
 
@@ -54,9 +54,9 @@
                                 <div class="row">
                                     <div class="col-md-12 category-header">
                                         <h4 class="panel-title">
-                                            <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
-                                                <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{ category.name }} 
-                                                
+                                            <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}_category">
+                                                <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{ category.name }}
+
                                                 {% if not all %}
                                                     ({{ category|subject_count:user }})
                                                 {% else %}
@@ -64,10 +64,10 @@
                                                 {% endif %}
                                             </a>
                                         </h4>
-                                        
+
                                         <div class="col-md-5 pull-right category-card-items">
                                             {% if request.user.is_staff or user in category.coordinators.all %}
-                                                <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                                                <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
                                                 </a>
                                                 <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
@@ -79,17 +79,17 @@
                                                     <a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')" aria-hidden="true"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
                                                 </ul>
                                             {% endif %}
-                                            
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
+                            <div id="{{category.slug}}_category" class="panel-collapse panel-body collapse category-panel-content">
                                 <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
                                 <input type="hidden" class="log_id" value="" />
 
                                 <input type="hidden" class="load_sub_url" value="{% url 'subjects:load_view' category.slug %}" />
-                                
+
                                 {% if category.coordinators.all|length > 0  %}
                                     <h4><b>{% trans "Coordinator(s) " %}: </b>
                                         {{ category.coordinators.all|join:', ' }}
@@ -97,16 +97,16 @@
                                 {% else %}
                                     <h4> {% trans "It doesn't possess coordinators" %} </h4>
                                 {% endif %}
-                               
+
                                 {{category.description|safe}}
-                            
+
                                 {% if request.user in category.coordinators.all or request.user.is_staff %}
                                     <a href="{% url 'subjects:create' category.slug %}" class="btn btn-raised btn-success btn-block btn-sm">{% trans "Create new subject" %}</a>
                                 {% endif %}
-                                
-                                <div class="panel-group subject-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
-                                    
-                                </div>                                
+
+                                <div class="panel-group subject-group" id="{{ category.slug }}_category-accordion" role="tablist" aria-multiselectable="true">
+
+                                </div>
                                 <div class="holder text-center"></div>
                             </div>
                         </div>
@@ -116,8 +116,8 @@
                                 <div class="row">
                                     <div class="col-md-12 category-header">
                                         <h4 class="panel-title">
-                                            <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
-                                                <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}} 
+                                            <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}_category">
+                                                <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
 
                                                 {% if not all %}
                                                     ({{ category|subject_count:user }})
@@ -126,10 +126,10 @@
                                                 {% endif %}
                                             </a>
                                         </h4>
-                                        
+
                                         <div class="col-md-5 pull-right category-card-items">
                                              {% if request.user.is_staff or user in category.coordinators.all %}
-                                                <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                                                <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
                                                 </a>
                                                 <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
@@ -140,12 +140,12 @@
                                                     <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
                                                 </ul>
                                             {% endif %}
-                                                                                        
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
+                            <div id="{{category.slug}}_category" class="panel-collapse panel-body collapse category-panel-content">
                                 <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
                                 <input type="hidden" class="log_id" value="" />
 
@@ -158,15 +158,15 @@
                                 {% else %}
                                     <h4> {% trans "It doesn't possess coordinators" %} </h4>
                                 {% endif %}
-                               
+
                                 {{category.description|safe}}
-                                
+
                                 {% if request.user in category.coordinators.all or request.user.is_staff %}
                                     <a href="{% url 'subjects:create' category.slug %}" class="btn btn-raised btn-success btn-block btn-sm">{% trans "Create new subject" %}</a>
                                 {% endif %}
 
-                                <div class="panel-group subject-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
-                                                                       
+                                <div class="panel-group subject-group" id="{{ category.slug }}_category-accordion" role="tablist" aria-multiselectable="true">
+
                                 </div>
                             </div>
                         </div>
@@ -185,12 +185,12 @@
     </div>
 
     <div id="modal_subject"></div>
-    
+
     <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
-    <script type="text/javascript" src="{% static "subjects/js/modal_subject.js" %}"></script>
+    <script type="text/javascript" src="{% static 'subjects/js/modal_subject.js' %}"></script>
     <script type="text/javascript">
         $(function (){
-            var cat_slug = "{{ cat_slug }}"
+            var cat_slug = "{{ cat_slug }}_category"
 
             if (cat_slug != "") {
                 $("#" + cat_slug).collapse('show');
