--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -6,7 +6,7 @@
 
 {% block javascript%}
     {{ block.super }}
-    <script type="text/javascript" src=" {% static "js/category.js" %} "></script>
+    <script type="text/javascript" src=" {% static 'js/category.js' %} "></script>
 {% endblock%}
 
 
@@ -18,11 +18,11 @@
     {% with bread|add:tags as term  %}
         {% breadcrumb  term 'subjects:index' %}
     {% endwith %}
-   	
+
 
 {% endblock breadcrumbs %}
 
- 
+
 {% block content %}
 
 	 {% if messages %}
@@ -51,21 +51,21 @@
                 <a href="{% url 'subjects:search' 'subjects' %}?search={{tags}}"><li class="active">{% trans "Subjects" %} ({{ totals.my_subjects }})</li></a>
                 <a href="{% url 'subjects:search' 'resources' %}?search={{tags}}" ><li>{% trans "Resources" %} ({{ totals.resources }})</li></a>
             {% endif %}
-            
+
         </ul>
     </div>
 
-   
+
 
     <div class="col-md-12 cards-content">
-		
+
 
 		{% if not all %}
 	    	<div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
 				{% for subject in subjects %}
 					{% include "subjects/subject_card.html" with accordion_id="subject-accordion" %}
 				{% endfor %}
-				
+
 				{% pagination request paginator page_obj %}
 			</div>
 		 {% elif resources|length > 0 and all %}
@@ -73,10 +73,10 @@
                 {% for resource in resources %}
                     {% include "subjects/resource_card.html" with resource=resource accordion_id="subject-accordion" %}
                 {% endfor %}
-                
+
                 {% pagination request paginator page_obj %}
             </div>
-        {% else %}	
+        {% else %}
 		{% endif %}
 
 	</div>
@@ -85,7 +85,7 @@
     </div>
 
     <div id="modal_subject"></div>
-    
+
     <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
-	
+
 {% endblock content %}
