--- a/subjects/templates/subjects/update.html
+++ b/subjects/templates/subjects/update.html
@@ -5,12 +5,12 @@
 
 {% block style %}
 	{{block.super}}
-	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-tagsinput.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-tagsinput.css' %}">
 {% endblock %}
 
 {% block javascript %}
 	{{block.super}}
-	<script type="text/javascript" src="{% static "js/bootstrap-tagsinput.js" %} "></script>
+	<script type="text/javascript" src="{% static 'js/bootstrap-tagsinput.js' %} "></script>
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -18,9 +18,9 @@
 
 	{% breadcrumb subject.category 'subjects:cat_view' subject.category.slug %}
 	{% breadcrumb subject 'subjects:view' subject.slug %}
-	
+
 	{% trans 'Update: ' as bread %}
-	{% with bread|add:object.name as bread_slug %}	
+	{% with bread|add:object.name as bread_slug %}
 		{% breadcrumb bread_slug 'subjects:update' %}
 	{% endwith %}
 {% endblock %}
